# Optlab-Research

./: .gitignore  AUDIT.md
config/: ibkr.yaml
manifests/: backtest_2db596aa.json  backtest_2f9da44b.json  backtest_325b1dea.json  backtest_6050da26.json  backtest_61a5cb57.json  backtest_6fbcc637.json  backtest_7978689c.json  backtest_9f7eb185.json  backtest_a2994c0b.json  backtest_a372dbc9.json  backtest_a822eca7.json  backtest_adb2e7c6.json  backtest_c8d5e4f5.json  backtest_cba4b574.json  backtest_cbdfd329.json  backtest_cd7d4cf2.json  backtest_d53237dc.json  backtest_d9017b2c.json  backtest_ddbeb60d.json  backtest_f3782206.json
notebooks/: README.md  _audit.py  _debug_groupby.py  _execute.py  _execute_ipython.py  _execute_notebook.py  _find_data.py  _load_ff3.py  _run_cell_by_cell.py  _run_notebook.py  _run_notebook1.py  _run_one.py  _verify_ff3.py
notebooks/examples/: 08_report_generation.ipynb  10_ibkr_snapshot.ipynb  11_snapshot_monitoring.ipynb  cross_section_summary.ipynb  executed_output.ipynb
optlab-research/: README.md  gitignore  pyproject.toml
optlab-research/config/: signals.yaml  universes.yaml
optlab-research/notebooks/examples/: cross_section_summary.ipynb
optlab-research/optlab_research/: __init__.py  db.py
optlab-research/optlab_research/signals/: compute.py  registry.py
optlab-research/optlab_research/universes/: builder.py
optlab-research/optlab_research/workbench/: __init__.py  api.py
optlab_research/: logging_setup.py
scripts/: ibkr_snapshot_daemon.py  snapshot_once.py
tests/: test_backtest_engine.py  test_signals.py
(+21 files in other folders)
