[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "optlab-research"
version = "0.1.0"
description = "Equity research workbench and live options lab built on top of optlab"
requires-python = ">=3.11"
dependencies = [
    "polars>=0.20",
    "duckdb>=0.10",
    "pyarrow>=15.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "scipy>=1.12",
    "statsmodels>=0.14",
    "plotly>=5.20",
    "numpy>=1.26",
]

[project.optional-dependencies]
ibkr      = ["ib_async>=1.0"]
dashboard = ["streamlit>=1.30"]
dev       = ["pytest>=8.0", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["optlab_research"]

[tool.pytest.ini_options]
testpaths   = ["tests"]
python_files = ["test_*.py"]
addopts     = "-v"
